--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: table_plus
+name: table_plus2
 description: Plugin supports for table search
 version: 0.0.1
 homepage: https://github.com/ITPLMobilePlugins/table_plus2
