--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: table_plus2
 description: Plugin supports for table search
 version: 0.0.1
 homepage: https://github.com/ITPLMobilePlugins/table_plus2
+repository: https://github.com/ITPLMobilePlugins/table_plus2
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
